content/networking/udn/manifests/components/agnhost/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: agnhost
spec:
  path: /
  to:
    kind: Service
    name: agnhost
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
